...
                }
            }
        }
    }

    CaffeineScreenScaffold(
        title = "Add a drink",
        headerBottomSpacing = 0.dp
    ) { bottomPadding ->
        SearchBar(
            inputField = {
                SearchBarDefaults.InputField(
                    query = searchQuery,
                    onQueryChange = { viewModel.updateSearchQuery(it) },
                    onSearch = { focusManager.clearFocus() },
                    expanded = false,
                    onExpandedChange = { },
                    placeholder = { Text("Search drinks...") },
                    leadingIcon = {
                        Icon(
                            imageVector = Icons.Filled.Search,
                            contentDescription = "Search"
                        )
                    },
...
                },
                enabled = selectedUnit != null,
                modifier = Modifier
                    .fillMaxWidth()
                    .height(56.dp),
            ) {
                Text("Add entry")
            }
        }

        Spacer(modifier = Modifier.height(8.dp))
    }
}
...
